--- a/AGG/Objects/AndroidManifest.xml
+++ b/AGG/Objects/AndroidManifest.xml
@@ -13,6 +13,7 @@
 	    android:anyDensity="true"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<application
 		android:icon="@drawable/icon"
 		android:label="B4A Example">
