--- a/AGG/Objects/AndroidManifest.xml
+++ b/AGG/Objects/AndroidManifest.xml
@@ -11,9 +11,8 @@
 	    android:normalScreens="true" 
 	    android:smallScreens="true" 
 	    android:anyDensity="true"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
 	<application
 		android:icon="@drawable/icon"
 		android:label="AGG">
@@ -29,5 +28,9 @@
 			</intent-filter>
 			
 		</activity>
+		<service android:name="anywheresoftware.b4a.samples.httputils2.httputils2service">
+		</service>
+		<receiver android:name="anywheresoftware.b4a.samples.httputils2.httputils2service$httputils2service_BR">
+		</receiver>
 	</application>
 </manifest>
